fix overflow

--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,9 @@
 body {
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   color: white;
+}
+
+html {
   max-width: 100vw;
 }
 
