--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,9 @@ header {
 body {
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   color: white;
+}
+
+html {
   max-width: 100vw;
 }
 
@@ -469,6 +472,8 @@ img {
   margin: 30px 0;
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 #projects .block .side {
