--- a/css/projects.css
+++ b/css/projects.css
@@ -19,6 +19,8 @@
   margin: 30px 0;
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 #projects .block .side {
